# conquer_cells

./: Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml
client/: index.html  nginx.conf
client/css/: style.css
client/js/: main.js
nginx/: default.conf
server/: Dockerfile  app.py  pyproject.toml
static/css/: style.css
static/js/: main.js
templates/: index.html
