[tool.poetry]
name = "mygame"
version = "0.1.0"
description = "A multiplayer strategy game using Flask-SocketIO"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.2.2"
Flask-SocketIO = "5.3.2"
eventlet = "0.32.0"
Werkzeug = ">=2.2,<3.0"
dnspython = "2.2.1"

[tool.poetry.dev-dependencies]
# Use poetry.group.dev.dependencies in future if needed

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
