[tool.poetry]
name = "server"
version = "0.1.0"
description = "Game server for multiplayer strategy game"
authors = ["Your Name <you@example.com>"]
packages = []  # Disable packaging of the current project

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.2.2"
Flask-SocketIO = "5.3.2"
eventlet = "0.32.0"
Werkzeug = "2.2.2"
dnspython = "2.2.1"  # Downgraded to 2.2.1

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
